tests/snapshots/ptx_golden_partition_snapshots__partition_reduce_count.snap
---
source: tests/ptx_golden_partition_snapshots.rs
expression: normalize_ptx(&ptx)
---
.version 7.5
.target sm_70
.address_size 64

.shared .align 4 .b8 block_keys_buf[4096];
.shared .align 8 .b8 block_counts_buf[8192];
.shared .align 4 .b8 block_set_buf[4096];

.visible .entry bolt_partition_reduce_count(
	.param .u64 bolt_partition_reduce_count_param_0,
	.param .u64 bolt_partition_reduce_count_param_1,
	.param .u64 bolt_partition_reduce_count_param_2,
	.param .u64 bolt_partition_reduce_count_param_3,
	.param .u64 bolt_partition_reduce_count_param_4
)
{
	.reg .pred  %p<16>;
	.reg .b32   %r<64>;
	.reg .b64   %rd<64>;
	.reg .u32   %nstime;

	mov.u32 %r{0}, %ctaid.x;
	mov.u32 %r{1}, %ntid.x;
	mov.u32 %r{2}, %tid.x;
	mov.u64 %rd{0}, block_keys_buf;
	mov.u64 %rd{1}, block_counts_buf;
	mov.u64 %rd{2}, block_set_buf;
	ld.param.u64 %rd{3}, [bolt_partition_reduce_count_param_0];
	cvta.to.global.u64 %rd{3}, %rd{3};
	ld.param.u64 %rd{4}, [bolt_partition_reduce_count_param_1];
	cvta.to.global.u64 %rd{4}, %rd{4};
	ld.param.u64 %rd{5}, [bolt_partition_reduce_count_param_2];
	cvta.to.global.u64 %rd{5}, %rd{5};
	ld.param.u64 %rd{6}, [bolt_partition_reduce_count_param_3];
	cvta.to.global.u64 %rd{6}, %rd{6};
	ld.param.u64 %rd{7}, [bolt_partition_reduce_count_param_4];
	cvta.to.global.u64 %rd{7}, %rd{7};

	mul.wide.u32 %rd{8}, %r{0}, 4;
	add.s64 %rd{9}, %rd{4}, %rd{8};
	ld.global.u32 %r{3}, [%rd{9}];
	add.s64 %rd{10}, %rd{9}, 4;
	ld.global.u32 %r{4}, [%rd{10}];

	mov.u32 %r{5}, %r{2};
ZERO_TOP:
	setp.ge.u32 %p{0}, %r{5}, 1024;
	@%p{0} bra ZERO_DONE;
	mul.wide.u32 %rd{11}, %r{5}, 4;
	add.s64 %rd{12}, %rd{0}, %rd{11};
	st.shared.u32 [%rd{12}], 0;
	mul.wide.u32 %rd{13}, %r{5}, 8;
	add.s64 %rd{14}, %rd{1}, %rd{13};
	st.shared.u64 [%rd{14}], 0;
	add.s64 %rd{15}, %rd{2}, %rd{11};
	st.shared.u32 [%rd{15}], 0;
	add.u32 %r{5}, %r{5}, 256;
	bra ZERO_TOP;
ZERO_DONE:
	bar.sync 0;

	add.u32 %r{6}, %r{3}, %r{2};
LOOP_TOP:
	setp.ge.u32 %p{1}, %r{6}, %r{4};
	@%p{1} bra LOOP_DONE;
	mul.wide.u32 %rd{16}, %r{6}, 4;
	add.s64 %rd{17}, %rd{3}, %rd{16};
	ld.global.s32 %r{7}, [%rd{17}];
	and.b32 %r{8}, %r{7}, 0x3FF;
	mov.u32 %r{9}, 0;
PROBE_TOP:
	add.u32 %r{9}, %r{9}, 1;
	setp.gt.u32 %p{2}, %r{9}, 1024;
	@%p{2} bra LOOP_NEXT;
	mul.wide.u32 %rd{18}, %r{8}, 4;
	add.s64 %rd{19}, %rd{2}, %rd{18};
	add.s64 %rd{20}, %rd{0}, %rd{18};
	mul.wide.u32 %rd{21}, %r{8}, 8;
	add.s64 %rd{22}, %rd{1}, %rd{21};
	atom.shared.cas.b32 %r{10}, [%rd{19}], 0, 1;
	setp.eq.s32 %p{3}, %r{10}, 0;
	@%p{3} bra CLAIM;
	membar.cta;
	ld.acquire.cta.s32 %r{11}, [%rd{20}];
	setp.eq.s32 %p{4}, %r{11}, %r{7};
	@%p{4} bra MATCH;
	add.u32 %r{8}, %r{8}, 1;
	and.b32 %r{8}, %r{8}, 0x3FF;
	mov.u32 %nstime, 32;
	nanosleep.u32 %nstime;
	bra PROBE_TOP;
CLAIM:
	st.shared.u32 [%rd{20}], %r{7};
	membar.cta;
	atom.shared.add.u64 %rd{23}, [%rd{22}], 1;
	bra LOOP_NEXT;
MATCH:
	atom.shared.add.u64 %rd{24}, [%rd{22}], 1;
LOOP_NEXT:
	add.u32 %r{6}, %r{6}, %r{1};
	bra LOOP_TOP;
LOOP_DONE:
	bar.sync 0;

	mul.lo.u32 %r{12}, %r{0}, 1024;
	mov.u32 %r{13}, %r{2};
EXPORT_TOP:
	setp.ge.u32 %p{5}, %r{13}, 1024;
	@%p{5} bra EXPORT_DONE;
	add.u32 %r{14}, %r{12}, %r{13};
	mul.wide.u32 %rd{25}, %r{13}, 4;
	add.s64 %rd{26}, %rd{0}, %rd{25};
	ld.shared.s32 %r{15}, [%rd{26}];
	mul.wide.u32 %rd{27}, %r{13}, 8;
	add.s64 %rd{28}, %rd{1}, %rd{27};
	ld.shared.u64 %rd{29}, [%rd{28}];
	add.s64 %rd{30}, %rd{2}, %rd{25};
	ld.shared.u32 %r{16}, [%rd{30}];
	setp.ne.s32 %p{6}, %r{16}, 0;
	selp.u32 %r{17}, 1, 0, %p{6};
	mul.wide.u32 %rd{31}, %r{14}, 4;
	add.s64 %rd{32}, %rd{5}, %rd{31};
	st.global.s32 [%rd{32}], %r{15};
	mul.wide.u32 %rd{33}, %r{14}, 8;
	add.s64 %rd{34}, %rd{6}, %rd{33};
	st.global.u64 [%rd{34}], %rd{29};
	cvt.u64.u32 %rd{35}, %r{14};
	add.s64 %rd{36}, %rd{7}, %rd{35};
	st.global.u8 [%rd{36}], %r{17};
	add.u32 %r{13}, %r{13}, 256;
	bra EXPORT_TOP;
EXPORT_DONE:
	ret;
}
