tests/snapshots/ptx_golden_partition_snapshots__partition_reduce_count_spill.snap
---
source: tests/ptx_golden_partition_snapshots.rs
assertion_line: 224
expression: normalize_ptx(&ptx)
---
.version 7.5
.target sm_70
.address_size 64

.shared .align 4 .b8 block_keys_buf_csp[4096];
.shared .align 8 .b8 block_counts_buf_csp[8192];
.shared .align 4 .b8 block_set_buf_csp[4096];

.visible .entry bolt_partition_reduce_count_spill(
	.param .u64 bolt_partition_reduce_count_spill_param_0,
	.param .u64 bolt_partition_reduce_count_spill_param_1,
	.param .u64 bolt_partition_reduce_count_spill_param_2,
	.param .u64 bolt_partition_reduce_count_spill_param_3,
	.param .u64 bolt_partition_reduce_count_spill_param_4,
	.param .u64 bolt_partition_reduce_count_spill_param_5
)
{
	.reg .pred  %p<16>;
	.reg .b32   %r<64>;
	.reg .b64   %rd<64>;

	mov.u32 %r{0}, %ctaid.x;
	mov.u32 %r{1}, %ntid.x;
	mov.u32 %r{2}, %tid.x;
	mov.u64 %rd{0}, block_keys_buf_csp;
	mov.u64 %rd{1}, block_counts_buf_csp;
	mov.u64 %rd{2}, block_set_buf_csp;
	ld.param.u64 %rd{3}, [bolt_partition_reduce_count_spill_param_0];
	cvta.to.global.u64 %rd{3}, %rd{3};
	ld.param.u64 %rd{4}, [bolt_partition_reduce_count_spill_param_1];
	cvta.to.global.u64 %rd{4}, %rd{4};
	ld.param.u64 %rd{5}, [bolt_partition_reduce_count_spill_param_2];
	cvta.to.global.u64 %rd{5}, %rd{5};
	ld.param.u64 %rd{6}, [bolt_partition_reduce_count_spill_param_3];
	cvta.to.global.u64 %rd{6}, %rd{6};
	ld.param.u64 %rd{7}, [bolt_partition_reduce_count_spill_param_4];
	cvta.to.global.u64 %rd{7}, %rd{7};
	ld.param.u64 %rd{8}, [bolt_partition_reduce_count_spill_param_5];
	cvta.to.global.u64 %rd{8}, %rd{8};

	mul.wide.u32 %rd{9}, %r{0}, 4;
	add.s64 %rd{10}, %rd{4}, %rd{9};
	ld.global.u32 %r{3}, [%rd{10}];
	add.s64 %rd{11}, %rd{10}, 4;
	ld.global.u32 %r{4}, [%rd{11}];

	mov.u32 %r{5}, %r{2};
ZERO_TOP:
	setp.ge.u32 %p{0}, %r{5}, 1024;
	@%p{0} bra ZERO_DONE;
	mul.wide.u32 %rd{12}, %r{5}, 4;
	add.s64 %rd{13}, %rd{0}, %rd{12};
	st.shared.u32 [%rd{13}], 0;
	mul.wide.u32 %rd{14}, %r{5}, 8;
	add.s64 %rd{15}, %rd{1}, %rd{14};
	st.shared.u64 [%rd{15}], 0;
	add.s64 %rd{16}, %rd{2}, %rd{12};
	st.shared.u32 [%rd{16}], 0;
	add.u32 %r{5}, %r{5}, 256;
	bra ZERO_TOP;
ZERO_DONE:
	bar.sync 0;

	add.u32 %r{6}, %r{3}, %r{2};
LOOP_TOP:
	setp.ge.u32 %p{1}, %r{6}, %r{4};
	@%p{1} bra LOOP_DONE;
	mul.wide.u32 %rd{17}, %r{6}, 4;
	add.s64 %rd{18}, %rd{3}, %rd{17};
	ld.global.s32 %r{7}, [%rd{18}];
	and.b32 %r{8}, %r{7}, 0x3FF;
	mov.u32 %r{9}, 0;
PROBE_TOP:
	add.u32 %r{9}, %r{9}, 1;
	setp.gt.u32 %p{2}, %r{9}, 1024;
	@%p{2} bra SPILL_BUMP;
	mul.wide.u32 %rd{19}, %r{8}, 4;
	add.s64 %rd{20}, %rd{2}, %rd{19};
	add.s64 %rd{21}, %rd{0}, %rd{19};
	mul.wide.u32 %rd{22}, %r{8}, 8;
	add.s64 %rd{23}, %rd{1}, %rd{22};
	atom.shared.cas.b32 %r{10}, [%rd{20}], 0, 1;
	setp.eq.s32 %p{3}, %r{10}, 0;
	@%p{3} bra CLAIM;
PUBLISH_WAIT:
	ld.volatile.shared.u32 %r{11}, [%rd{20}];
	setp.eq.u32 %p{4}, %r{11}, 2;
	@%p{4} bra PUBLISH_DONE;
	mov.u32 %r{11}, 32;
	nanosleep.u32 %r{11};
	bra PUBLISH_WAIT;
PUBLISH_DONE:
	membar.cta;
	ld.shared.s32 %r{12}, [%rd{21}];
	setp.eq.s32 %p{5}, %r{12}, %r{7};
	@%p{5} bra MATCH;
	add.u32 %r{8}, %r{8}, 1;
	and.b32 %r{8}, %r{8}, 0x3FF;
	bra PROBE_TOP;
CLAIM:
	st.shared.u32 [%rd{21}], %r{7};
	membar.cta;
	st.shared.u32 [%rd{20}], 2;
	atom.shared.add.u64 %rd{24}, [%rd{23}], 1;
	bra LOOP_NEXT;
MATCH:
	atom.shared.add.u64 %rd{25}, [%rd{23}], 1;
	bra LOOP_NEXT;
SPILL_BUMP:
	setp.eq.u64 %p{6}, %rd{8}, 0;
	@%p{6} bra LOOP_NEXT;
	atom.global.add.u32 %r{11}, [%rd{8}], 1;
LOOP_NEXT:
	add.u32 %r{6}, %r{6}, %r{1};
	bra LOOP_TOP;
LOOP_DONE:
	bar.sync 0;

	mul.lo.u32 %r{13}, %r{0}, 1024;
	mov.u32 %r{14}, %r{2};
EXPORT_TOP:
	setp.ge.u32 %p{7}, %r{14}, 1024;
	@%p{7} bra EXPORT_DONE;
	add.u32 %r{15}, %r{13}, %r{14};
	mul.wide.u32 %rd{26}, %r{14}, 4;
	add.s64 %rd{27}, %rd{0}, %rd{26};
	ld.shared.s32 %r{16}, [%rd{27}];
	mul.wide.u32 %rd{28}, %r{14}, 8;
	add.s64 %rd{29}, %rd{1}, %rd{28};
	ld.shared.u64 %rd{30}, [%rd{29}];
	add.s64 %rd{31}, %rd{2}, %rd{26};
	ld.shared.u32 %r{17}, [%rd{31}];
	setp.ne.s32 %p{4}, %r{17}, 0;
	selp.u32 %r{18}, 1, 0, %p{4};
	mul.wide.u32 %rd{32}, %r{15}, 4;
	add.s64 %rd{33}, %rd{5}, %rd{32};
	st.global.s32 [%rd{33}], %r{16};
	mul.wide.u32 %rd{34}, %r{15}, 8;
	add.s64 %rd{35}, %rd{6}, %rd{34};
	st.global.u64 [%rd{35}], %rd{30};
	cvt.u64.u32 %rd{36}, %r{15};
	add.s64 %rd{37}, %rd{7}, %rd{36};
	st.global.u8 [%rd{37}], %r{18};
	add.u32 %r{14}, %r{14}, 256;
	bra EXPORT_TOP;
EXPORT_DONE:
	ret;
}
